--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <nav class="bg-black">
         <ul class="flex space-x-1  text-white">
-            <div class="w-40 mx-44  justify-start p-2 mr-48 py-4"><img src="/PngItem_1897269.png" alt=""></div>
+            <div class="w-40 mx-44  justify-start p-2 mr-48 py-4">
+                <img src="PngItem_1897269.png" alt=""></div>
             <li class=" pl-80 ml-40  font-bold text-base p-4 py-7 hover:text-green-500 cursor-pointer">Premium</li>
             <li class=" font-bold text-base p-4 py-7 hover:text-green-500 cursor-pointer">Support</li>
             <li class=" font-bold text-base p-4 py-7 hover:text-green-500 cursor-pointer">Download</li>
